@@ -1,9 +1,6 @@
 #ifndef LIBBSD_STDLIB_H
 #define LIBBSD_STDLIB_H
 
-#include <sys/types.h>
-#include <stdio.h>
-
 const char *fmtcheck(const char *, const char *);
 
 #endif
